--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!DOCTYPE html><html><head><title>Ludum Dare #44 - by ladybenko</title><meta charset="utf-8"><style>body{background:#000;margin:0;padding:0}</style></head><body> <script src="/ldjam-44/main.02263625.js"></script> </body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ludum Dare #44 - by ladybenko</title>
+    <meta charset="utf-8">
+    <style>body {
+        background: #000;
+        margin: 0;
+        padding: 0;
+      }</style>
+  </head>
+  <body>
+    <script src="/main.1f19ae8e.js"></script>
+  </body>
+</html>
